fix: menu panel still be clickable set z-index to -3

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -119,6 +119,7 @@
     background: #fff;
     transition: all 0.5s linear;
     overflow-x: visible;
+    z-index: -3;
 }
 
 .navItem {
